@@ -1,9 +1,9 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
+FROM gradle:8.6.0-jdk21-alpine AS build
 COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
 RUN gradle build --no-daemon
 
-FROM openjdk:8-jre-slim
+FROM amazoncorretto:21-alpine3.18
 
 EXPOSE 8080
 
@@ -11,4 +11,4 @@ RUN mkdir /app
 
 COPY --from=build /home/gradle/src/build/libs/*.jar /app/application.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/application.jar"]
+ENTRYPOINT ["java", "-jar", "/app/application.jar"]
